--- a/src/index.css
+++ b/src/index.css
@@ -28,24 +28,17 @@
   --color-black : #000000
 }
 
-.dark {
-  --color-bg: rgba(2, 1, 44,0);
-  --color-text: #ffffff;
-  --color-primary: #6366f1; /* indigo */
-}
-
-.theme-green {
-  --color-bg: #21b760;
-  --color-text: #000000;
-  --color-primary: #10b981; /* green */
-}
-
-.theme-red {
-  --color-primary: #ef4444; /* red */
-}
-
-.theme-purple {
-  --color-primary: #8b5cf6; /* purple */
+.light {
+  --color-bg: #fafafa;
+  --color-text: #000;
+  --color-neutral-300: #312f4b; 
+  --color-neutral-600: #adb1cc; 
+  --color-neutral-700: #d2d3db; 
+  --color-neutral-800: #e4e5f1; 
+  --color-neutral-900: #02012C; 
+  --color-blue-500 : #4658D9;
+  --color-blue-700 : #2B1B9C;
+  --color-black : #000000
 }
 
   .scrollbar::-webkit-scrollbar {
@@ -62,4 +55,32 @@
     border: 1px solid var(--color-neutral-600);
   }
 
- 
+ .svg-icon path{
+  fill: var(--color-text);
+ }
+
+@keyframes bounce-move {
+  0%, 80%, 100% {
+    transform: translateY(0) scale(0.6);
+    opacity: 0.3;
+  }
+  40% {
+    transform: translateY(-10px) scale(1);
+    opacity: 1;
+  }
+}
+
+.dot {
+  animation: bounce-move 1.4s infinite ease-in-out;
+}
+
+.dot:nth-child(1) {
+  animation-delay: 0s;
+}
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
